クォーテーションの間違いなど修正

--- a/pandas_01.ipynb
+++ b/pandas_01.ipynb
@@ -24,11 +24,16 @@
     "# 本教材の進め方\n",
     "- コードの各セル(グレーの部分)を選択して、上の実行ボタン(▲と|)をポチポチします\n",
     "    - あえてめんどくさくしているのは、居眠り防止のためです。\n",
+    "    - と言いたいところですが、単純にコンテンツが長くなりすぎるためです。\n",
     "\n",
     "***\n",
     "## 補足\n",
     "-　import pandas as pd　やCSV読込は、1つのプログラムの先頭で1回呼ぶだけでOKです。\n",
-    "- ただし今回は途中参加の方や、実行中にPCが落ちて再起動した場合など焦ることもあるので、あえてJupyterの1セル単位でimportをしています。\n"
+    "- ただし今回は途中参加の方や、実行中にPCが落ちて再起動した場合など焦ることもあるので、あえてJupyterの1セル単位でimportをしています。\n",
+    "\n",
+    "***\n",
+    "## 懺悔\n",
+    "- 資料中のクォーテーション表記や、DataFrameのカラム表記に一貫していない箇所があります。。\n"
    ]
   },
   {
@@ -50,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -72,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -94,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -134,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -209,7 +222,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 注) Pythonのループなど出てくるので、ここは参考に読む程度で良い。\n",
@@ -253,14 +268,17 @@
     "- df[['Name', 'SepalLength, 'PetalLength']]   \n",
     "    * 注意点) 複数選択は[[]] で括る\n",
     " \n",
-    "※カラム名の代わりに番号も使える。　例) df[0]   , df[[0 ,2 ,4]]\n",
+    "※カラム名の代わりに番号も使える(使いどころはないかも)。    \n",
+    "例) df[0]   , df[[0 ,2 ,4]]    \n",
     "※distinctは別の文法を使うので後述。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -290,13 +308,15 @@
     "　　\n",
     "- 「:」だけの場合は\"列指定の省略(行のみ抽出)\"または、\"行指定の省略(列のみ抽出)\"となる\n",
     "\n",
-    "df =df.loc[:,[‘Name’, ‘SepalLength,’PetalLength’]]"
+    "df =df.loc[:,['Name', 'SepalLength','PetalLength']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -318,7 +338,7 @@
     "***\n",
     "## 4) GROUP BY句的なもの\n",
     "### A. 基本) 1つのキーに対して、1列以上の集計を行う\n",
-    "- index=’Name’ ,value = \"SepalLength\",\"PetalLength\"各々の最大値\n",
+    "- index=’Name’ 、　value = \"SepalLength\",\"PetalLength\"各々の最大値\n",
     "    * df[[\"Name\",  \"SepalLength\",\"PetalLength\"]] .groupby([\"Name\"]).max() \n",
     "\n",
     "### B. 応用) キーを指定せず、全てのレコードに対して集計を行う\n",
@@ -340,8 +360,11 @@
    "source": [
     "import pandas as pd\n",
     "df= pd.read_csv(\"./iris.csv\")\n",
-    "print(\"# NameでGroupBYし、SepalLengthとPetalLengthのMAXを出力\")\n",
+    "print(\"# NameでGroupBYし、MAXを出力\")\n",
+    "print(\"\\n必要なカラムをあらかじめ選択した場合\")\n",
     "print(df[[\"Name\",  \"SepalLength\",\"PetalLength\"]] .groupby([\"Name\"]).max() )\n",
+    "print(\"\\nName以外全部集計して出す場合\")\n",
+    "print(df.groupby([\"Name\"]).max() )\n",
     "\n",
     "print(\"\\n # indexの指定なし--------------------\")\n",
     "print(df.max())\n",
@@ -356,7 +379,7 @@
    "metadata": {},
    "source": [
     "### C. 応用)複数のキーでGROUP BY & 複数の要約統計量\n",
-    "df = df[['Group_1','Name']] .groupby(['Group_1','Name']).max()\n",
+    "df = df.groupby(['key1','key2']).max()\n",
     "\n",
     "### D. 応用)複数の要約統計量\n",
     "df.describe()"
@@ -377,8 +400,8 @@
     "df['Group'][5:9]=\"B\" # index5-9に\"B\"\n",
     "df['Group'][10:14]=\"C\" # index10-14に\"C\"\n",
     "\n",
-    "print(\"\\n # SepalLengthのmax()のみ出力------------\")\n",
-    "print(df[['Group','Name','SepalLength']] .groupby(['Group','Name']).max())\n",
+    "print(\"\\n # max()のみ出力------------\")\n",
+    "print(df.groupby(['Group','Name']).max())\n",
     "print(\"\\n #複数の要約統計量を出力------------\")\n",
     "print( df.groupby(['Group','Name']).describe())\n",
     "\n",
@@ -418,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -446,16 +471,18 @@
     "## 6) WHERE的なもの(文字列編)  \n",
     "### 6-1) 完全一致\n",
     "#### A. イコール \n",
-    "df[ df.列名==’hoge’ ]\n",
+    "df[ df.列名=='hoge' ]\n",
     "\n",
     "#### B. Not イコール\n",
-    "df[ df.列名!=’hoge’ ]  または  df[~(df.列名==’hoge’ )]\n"
+    "df[ df.列名!='hoge' ]  または  df[~(df.列名=='hoge' )]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -474,9 +501,9 @@
    "source": [
     "### 6-2) 複数条件\n",
     "#### A. in \n",
-    "df[ df.列名.isin([’hoge’, ’piyo’]) ]  \n",
+    "df[ df.列名.isin(['hoge', 'piyo']) ]  \n",
     "#### B. Not in\n",
-    "df[~(df.列名.isin([’hoge’, ’piyo’]) )]\n",
+    "df[~(df.列名.isin(['hoge', 'piyo']) )]\n",
     "\n",
     "\n",
     "※ “~”が否定を示す"
@@ -485,7 +512,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -504,21 +533,25 @@
    "source": [
     "### 6-3) 部分一致(〜を含む)\n",
     "#### A. like \n",
-    "df[df.列名.str.contains(‘hoge’)]\n",
+    "df[df.列名.str.contains('hoge')]\n",
     "\n",
     "\n",
     "#### B. Not like\n",
-    "df[~(df.列名.str.contains(‘hoge’))]\n",
+    "df[~(df.列名.str.contains('hoge'))]\n",
     "\n",
     "### 6-4) 部分一致の複数条件(\"|\"を間に挟む)\n",
-    "df[df.列名.str.contains(‘hoge|piyo’)]  \n",
+    "df[df.列名.str.contains('hoge|piyo')]  \n",
+    "    \n",
+    "※str.contains()はPythonの文法。正規表現も扱える。\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -541,12 +574,12 @@
    "source": [
     "### 6-5) 複合条件\n",
     "#### 条件A and B\n",
-    "df[(df.type_a.str.contains(‘hoge’)) & ~(df.type_b==’piyo’ )]\n",
-    " => type_aに’hoge’を含み、かつ、type_bに’piyo’を含まない。\n",
+    "df[(df.column_a.str.contains('hoge')) & ~(df.column_b=='piyo' )]    \n",
+    " => column_aに'hoge'を含み、かつ、column_bに'piyo'を含まない。\n",
     " \n",
     "#### 条件 A or B\n",
-    "df[(df.type_a.str.contains(‘hoge’)) | ~(df.type_b==’piyo’ )]\n",
-    " => type_aに’hoge’を含む、または、type_bに’piyo’を含まない。\n",
+    "df[(df.column_a.str.contains('hoge')) | ~(df.column_b=='piyo' )]    \n",
+    " => column_aに'hoge'を含む、または、type_bに'piyo'を含まない。\n",
     "\n",
     "※それぞれの条件は”()”で括る必要がある。   \n",
     "※”&”と”|”は、1つが正解。\n"
@@ -555,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -596,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -619,8 +656,8 @@
     "## 重要) 抽出カラムに数字以外のデータ(NaN)があると、意図しない挙動になることがある\n",
     "#### 数字列にNullが含まれると、、\n",
     "カラムは数値型のままで、Nullが\"NaN\"で表示される。   \n",
-    "それによって、集計がおかしくなったり、エラーになったりする。   \n",
-    "=> 変換しましょう。(そんなに苦労はない)\n",
+    "それによって、集計がおかしくなったり、後々の処理でエラーになったりするなどバグの温床になりやすい。  \n",
+    "=> 苦しむ前に変換しましょう。(そんなに苦労はない)\n",
     "\n",
     "#### 数字列に文字列が含まれると、、\n",
     "カラム自体がobject型になる    \n",
@@ -630,7 +667,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Nullを含むCSVを使った場合\n",
@@ -660,19 +699,22 @@
     "    - 例) df=df.replace(np.nan, 0)\n",
     "2. df.fillna(0)で、欠損値を穴埋めする\n",
     "3. df.dropna() で、NaNを含む行を削除する。\n",
-    "    - where 列名 is not null と同義\n",
+    "    - SQLのwhere 列名 is not null と同義\n",
     "\n",
     "※必ずしも0に置き換えて良いとは限らない。データを確認し、検討の上で変換すること。\n",
     "\n",
     "### 応用\n",
-    "特定の列を指定したreplaceなども可能。    \n",
+    "特定のカラムを指定したreplaceなども可能。    \n",
+    "文字列のカラムの欠損には\"-\"を入れるなど使い分けができる。  \n",
     "df[['SepalLength ', 'SepalWidth']].replace( np.nan,0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -693,6 +735,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 実はdf.query()というものも存在する\n",
+    "わかりやすいが速度が遅いとかなんとか。。    \n",
+    "興味があれば検索してみてください。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***\n",
     "# JOINの説明の前に、ちょっと小ワザ集\n",
     "## 小ワザ1) 要素の追加 \n",
@@ -703,7 +754,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -726,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -746,8 +801,7 @@
     "***\n",
     "## 小ワザ3) カラムのリネーム\n",
     "\n",
-    "### 1列のみ\n",
-    "df.rename(columns =(\"列A\": \"a\"))    \n",
+    "### 1列のみ  \n",
     "df.rename(columns ={\"列A\": \"a\"})\n",
     "\n",
     "### 複数\n",
@@ -757,7 +811,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -787,7 +843,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -827,7 +885,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -854,7 +914,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -919,7 +981,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -967,15 +1031,13 @@
     "print(\"\\n #カラム'ID' を持つDataframe\")\n",
     "df_2= pd.read_csv(\"./iris.csv\")\n",
     "df_2= df_2[[\"PetalLength\", \"PetalWidth\",\"Name\"]]#列を絞る\n",
-    "df_2[\"ID\"]=df_2.index.astype(str)\n",
+    "df_2[\"No\"]=df_2.index.astype(str)\n",
     "print(df_2[:3])\n",
     "\n",
     "\n",
     "print(\"\\n #カラム'No'と'ID' でマージした結果\")\n",
-    "df_3= pd.merge(df_1, df_2, left_on='No', right_on='ID')\n",
-    "print(df_3[:3])\n",
-    "\n",
-    "#同じ名前のカラムには\"_x\",\"_y\"がつきます"
+    "df_3= pd.merge(df_1, df_2, how='inner')\n",
+    "print(df_3[:3])\n"
    ]
   },
   {
@@ -1009,7 +1071,9 @@
     "\n",
     "print(\"\\n #カラム'No'と'ID' でマージした結果\")\n",
     "df_3= pd.merge(df_1, df_2, left_on='No', right_on='ID')\n",
-    "print(df_3[:3])"
+    "print(df_3[:3])\n",
+    "\n",
+    "#同じ名前のカラムには\"_x\",\"_y\"がつきます"
    ]
   },
   {
